--- a/frontend/src/component/App.css
+++ b/frontend/src/component/App.css
@@ -30,8 +30,8 @@
 
 .leftGradientbox {
   flex-grow: 1;
-  height: 100%;
-  /* height: 50rem; */
+  /* max-height: 100%; */
+  height: 55rem;
   box-sizing: border-box;
   overflow: scroll;
   display: flex;
@@ -75,36 +75,8 @@
     white-space: pre-wrap; /* Allow text to wrap to the next line */
     width: 100%;
     height: 100%;
+    overflow: scroll;
     font-size: 2.5rem;
     margin-top: 1.5rem;
-  }
-  
-  .typing-line {
-    display: block;
-    width: 100%;
-    opacity: 0;
-    animation: typing 3s steps(40) 1s forwards, blink-caret 0.75s step-end infinite;
-  }
-  
-  /* Typing animation */
-  @keyframes typing {
-    0% {
-      width: 0;
-      opacity: 1;
-    }
-    100% {
-      width: 100%;
-      opacity: 1;
-    }
-  }
-  
-  /* Blinking cursor animation */
-  @keyframes blink-caret {
-    50% {
-      border-color: transparent;
-    }
-    100% {
-      border-color: black;
-    }
   }
   
